# simulcave

./: .gitignore  Aptfile  README.md  inspect_schema_diff.py  postgresql.docx  pyproject.toml  requirements.txt  simulcave.db  ~$stgresql.docx
app/: database.py  main.py  models.py  schemas.py
app/db/: base.py  session.py
app/routers/: auth.py  cave.py
app/services/: auth.py  email.py  energy_factors.py  geocoding.py  materials.py  nrcave_export.py  nrcave_import.py  nrcave_results.py  pdf.py  renovation.py  simulation.py  weather.py
app/simulcave_core/: __init__.py  adapter.py  engine.py  heat_recovery.py
app/templates/: base.html  cave_detail.html  cave_edit.html  cave_form.html  cave_parameters.html  cave_plan.html  caves_list.html  compare_caves.html  dashboard.html  forgot_password.html  login.html  monthly_targets.html  register.html  renovation_compare.html  renovation_custom_form.html  renovation_custom_result.html  renovation_result.html  report_pdf.html  reset_password.html  simulation_result.html
migrations/: env.py
migrations/versions/: 060eb559e7d4_align_existing_simulcave_schema.py
simulcave_core/: __init__.py  adapter.py  engine.py
simulcave_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: style.css
