[project]
name = "simulcave-core"
version = "0.1.0"
description = "Moteur de simulation énergétique pour caves viticoles"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
packages = ["simulcave_core"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"